# predictkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.ymk  commitlint.yml  release.yml  tag-dev.yml
examples/: anomaly_detection.py  basic_mqtt.py  industrial_monitoring.py
predictkit/: __init__.py  alerts.py  anomaly.py  cache.py  health.py  normalizer.py  stream.py
predictkit/drivers/: http.py  modbus.py  mqtt.py  opcua.py
predictkit/utils/: retry.py
predictkit_pro/: .gitkeep
tests/: test_anomaly.py  test_cache.py  test_health.py  test_normalizer.py
