[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predictkit"
version = "0.1.0"
description = "Python + C IoT SDK — reduce 300 lines of boilerplate to 5"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "PredictKit Contributors" }]
keywords = ["iot", "mqtt", "anomaly-detection", "industrial-iot", "sdk", "sensor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
mqtt = ["paho-mqtt>=1.6"]
opcua = ["opcua-asyncio>=0.9"]
modbus = ["pymodbus>=3.5"]
http = ["httpx>=0.25"]
ml = ["scikit-learn>=1.3", "numpy>=1.24"]
all = ["paho-mqtt>=1.6", "opcua-asyncio>=0.9", "pymodbus>=3.5", "httpx>=0.25", "scikit-learn>=1.3", "numpy>=1.24"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "black>=23.0", "mypy>=1.5", "ruff>=0.1"]

[project.urls]
Homepage = "https://predictkit.io"
Documentation = "https://docs.predictkit.io"
Repository = "https://github.com/sharanabasaveshwar/predictkit"
"Bug Tracker" = "https://github.com/sharanabasaveshwar/predictkit/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py39"]
