[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predictkit"
version = "0.1.0"
description = "Python IoT SDK — reduce 300 lines of boilerplate to 5"
readme = "README.md"
requires-python = ">=3.11"

# FIX: license as a plain SPDX string (not a TOML table)
license = "MIT"

authors = [
  { name = "Sharan B", email = "bsharanuk@gmail.com" }
]
keywords = ["iot", "mqtt", "anomaly-detection", "industrial-iot", "sdk", "predictive-maintenance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Hardware",
]

# Core has zero required dependencies (embedded-friendly)
dependencies = []

[project.optional-dependencies]
mqtt    = ["paho-mqtt>=1.6"]
ml      = ["scikit-learn>=1.3"]
alerts  = ["httpx>=0.25"]
cache   = []
dev     = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.1",
  "black>=23.0",
  "build>=1.0",
  "twine>=4.0",
]
all = [
  "paho-mqtt>=1.6",
  "scikit-learn>=1.3",
  "httpx>=0.25",
]

[project.urls]
Homepage   = "https://github.com/sharanabasaveshwar/predictkit"
Repository = "https://github.com/sharanabasaveshwar/predictkit"
Issues     = "https://github.com/sharanabasaveshwar/predictkit/issues"

# FIX: explicitly tell setuptools to ONLY include the `predictkit` package.
# Without this, setuptools auto-discovers BOTH `predictkit/` and `predictkit_pro/`
# and refuses to build. predictkit_pro is closed-source and must be excluded.
[tool.setuptools.packages.find]
include = ["predictkit*"]
exclude = ["predictkit_pro*", "tests*", "docs*", "examples*", "benchmarks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length    = 100
target-version = ["py311", "py312"]
